# tempo-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  USAGE.md  WINDOWS.md  docker-compose.yml  docker-setup.ps1  docker-setup.sh  docker-wrapper.ps1  docker-wrapper.sh  pyproject.toml  quick-start.bat  quick-start.ps1  quick-start.sh  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh
.github/workflows/: ci.yml
examples/: claude_desktop_config.json  claude_desktop_docker_config.json  claude_desktop_docker_windows.json  claude_desktop_python_windows.json  vscode_docker_mcp.json  vscode_docker_windows.json  vscode_mcp.json
src/tempo_mcp_server/: __init__.py  __main__.py  py.typed  server.py
tests/: test_server.py
